fix: Fixed popover in action bar misaligned with other buttons

--- a/scss/components/action-bar.scss
+++ b/scss/components/action-bar.scss
@@ -122,7 +122,7 @@ $block: #{$fd-namespace}-action-bar;
           }
         }
         .fd-popover {
-            top: - fd-space(1);
+            top: 0;
         }
     }
 }
